--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,6 +19,7 @@
     "css-loader": "^6.7.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "idempotent-babel-polyfill": "^7.4.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,7 +33,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "webpack serve --open",
+    "start": "react-scripts start",
     "build": "webpack --mode production",
     "test": "react-scripts test",
     "deploy": "gh-pages -d build"
